Fixed: spacing in contact mobile version

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -924,7 +924,6 @@ nav a {
 
     ul li {
       font-size: calc(40 * var(--scale));
-      transform: translateY(calc(60* var(--scale)));
     }
 
   }
